<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:gb="http://schemas.android.com/apk/res-auto"
    >


    <com.gamebox_idtkown.views.widgets.GBScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:background="@mipmap/my_bg"></RelativeLayout>

                <FrameLayout
                    android:id="@+id/download_wraper"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/btn_bg_selector"
                    android:clickable="true"
                    android:visibility="gone"
                    >

                    <ImageView
                        android:id="@+id/message"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/message"
                        ></ImageView>

                    <TextView
                        android:id="@+id/badge"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginLeft="28dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/tv_badge_bg_selector"
                        android:gravity="center"
                        android:text="1"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/font_small"
                        />
                </FrameLayout>


                <RelativeLayout
                    android:id="@+id/item"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="80dp"
                    android:background="@drawable/btn_bg_selector"
                    android:clickable="true"
                    android:paddingBottom="@dimen/spacing_small"
                    android:paddingTop="@dimen/spacing_small"
                    >

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:gravity="center_vertical"
                        android:src="@mipmap/avatar_default"
                        />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="6dp"
                        android:layout_marginRight="@dimen/spacing_small"
                        android:layout_toRightOf="@+id/avatar">

                        <TextView
                            android:id="@+id/nickname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/font_normal"
                            />

                        <TextView
                            android:id="@+id/phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/nickname"
                            android:layout_toRightOf="@+id/type"
                            android:gravity="center_horizontal"
                            android:textColor="@color/white"
                            android:textSize="@dimen/font_snormal"/>

                        <ImageView

                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="@dimen/spacing_small"
                            android:layout_marginTop="@dimen/spacing_tiny"
                            android:gravity="center_vertical"
                            android:src="@mipmap/my_origration"
                            />

                    </RelativeLayout>
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/banner"
                android:layout_marginTop="10dp"
                android:background="@color/white">

                <com.gamebox_idtkown.views.widgets.GBMyItemView
                    android:id="@+id/my_point"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/menu_item_hieght"
                    gb:src="@mipmap/my_point"
                    gb:text="@string/my_point"></com.gamebox_idtkown.views.widgets.GBMyItemView>

                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_below="@+id/my_point"
                    android:background="@color/gray"></View>

                <com.gamebox_idtkown.views.widgets.GBMyItemView
                    android:id="@+id/earn_point"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/menu_item_hieght"
                    android:layout_below="@+id/line"
                    android:background="@drawable/btn_bg_selector"
                    android:clickable="true"
                    gb:src="@mipmap/earn_point"
                    gb:text="@string/earn_point"></com.gamebox_idtkown.views.widgets.GBMyItemView>

                <View
                    android:id="@+id/line2"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_below="@+id/earn_point"
                    android:background="@color/gray"></View>

                <com.gamebox_idtkown.views.widgets.GBMyItemView
                    android:id="@+id/mall_point"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/menu_item_hieght"
                    android:layout_below="@+id/line2"
                    android:background="@drawable/btn_bg_selector"
                    android:clickable="true"
                    gb:src="@mipmap/mall_point"
                    gb:text="@string/mall_point"></com.gamebox_idtkown.views.widgets.GBMyItemView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/menu2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/menu"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                >

                <com.gamebox_idtkown.views.widgets.GBMyItemView
                    android:id="@+id/pu_balance"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/menu_item_hieght"
                    gb:src="@mipmap/pu_balance"
                    gb:text="@string/pu_balance"></com.gamebox_idtkown.views.widgets.GBMyItemView>

                <View
                    android:id="@+id/line3"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_below="@+id/pu_balance"
                    android:background="@color/gray"></View>

                <com.gamebox_idtkown.views.widgets.GBMyItemView
                    android:id="@+id/my_game"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/menu_item_hieght"
                    android:layout_below="@+id/line3"
                    android:background="@drawable/btn_bg_selector"
                    android:clickable="true"
                    gb:src="@mipmap/my_game2"
                    gb:text="@string/my_game"></com.gamebox_idtkown.views.widgets.GBMyItemView>

                <View
                    android:id="@+id/line4"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_below="@+id/my_game"
                    android:background="@color/gray"></View>

                <com.gamebox_idtkown.views.widgets.GBMyItemView
                    android:id="@+id/my_gifts"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/menu_item_hieght"
                    android:layout_below="@+id/line4"
                    android:background="@drawable/btn_bg_selector"
                    android:clickable="true"
                    gb:src="@mipmap/my_gifts"
                    gb:text="@string/my_gifts"></com.gamebox_idtkown.views.widgets.GBMyItemView>
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/menu3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/menu2"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                >

                <com.gamebox_idtkown.views.widgets.GBMyItemView
                    android:id="@+id/setting"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/menu_item_hieght"
                    android:background="@drawable/btn_bg_selector"
                    android:clickable="true"
                    gb:src="@mipmap/setting"
                    gb:text="@string/setting"></com.gamebox_idtkown.views.widgets.GBMyItemView>
            </RelativeLayout>

            <View
                android:id="@+id/blank"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_below="@+id/menu3"></View>
        </RelativeLayout>
    </com.gamebox_idtkown.views.widgets.GBScrollView>

    <com.gamebox_idtkown.views.widgets.GBActionBar
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:alpha="0"></com.gamebox_idtkown.views.widgets.GBActionBar>
</RelativeLayout>