<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/order_number_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/spacing_big"
            android:gravity="center_vertical"
            android:text="@string/order_number"
            android:textColor="@color/black"
            android:textSize="@dimen/font_normal"/>

        <TextView
            android:id="@+id/order_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/order_number_title"
            android:gravity="center_vertical"
            android:text="@string/order_number"
            android:textColor="@color/gray2"
            android:textSize="@dimen/font_normal"/>

        <TextView
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/spacing_big"
            android:gravity="center_vertical"
            android:textColor="@color/blue"
            android:textSize="@dimen/font_snormal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/spacing_big"
            android:layout_marginRight="@dimen/spacing_big"
            android:background="@color/gray"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/head"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/title_head"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginTop="4dp"
            >

            <TextView
                android:id="@+id/order_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/spacing_big"
                android:gravity="center_vertical"
                android:text="@string/order_number"
                android:textColor="@color/black"
                android:textSize="@dimen/font_normal"/>


            <TextView
                android:id="@+id/order_all_money"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/spacing_big"
                android:gravity="center_vertical"
                android:text="@string/order_number"
                android:textColor="@color/black"
                android:textSize="@dimen/font_small"/>

            <TextView
                android:id="@+id/order_all_money_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/order_all_money"
                android:gravity="center_vertical"
                android:text="@string/order_all_money"
                android:textColor="@color/black"
                android:textSize="@dimen/font_normal"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/title_head2"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_below="@+id/title_head"
            >

            <TextView
                android:id="@+id/order_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/spacing_big"
                android:gravity="center_vertical"
                android:text="@string/order_number"
                android:textColor="@color/black"
                android:textSize="@dimen/font_normal"/>

            <TextView
                android:id="@+id/order_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/spacing_small"
                android:layout_toRightOf="@+id/order_time"
                android:gravity="center_vertical"
                android:text="@string/order_number"
                android:textColor="@color/gray2"
                android:textSize="@dimen/font_snormal"/>

            <TextView
                android:id="@+id/order_pay_money"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/spacing_big"
                android:gravity="center_vertical"
                android:text="@string/order_number"
                android:textColor="@color/red"
                android:textSize="@dimen/font_small"/>

            <TextView
                android:id="@+id/order_pay_money_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/order_pay_money"
                android:gravity="center_vertical"
                android:text="@string/order_pay_money"
                android:textColor="@color/gray2"
                android:textSize="@dimen/font_snormal"/>
        </RelativeLayout>

    </RelativeLayout>

    <View
        android:id="@+id/order_bg"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/content"
        android:background="@color/bg"></View>
</RelativeLayout>
